feat(snake): add a terminal-based snake game with FCL integration
- Introduced `market.json` and `package.json` for the snake game package.
- Created documentation for the snake game in both English and Chinese.
- Implemented core classes for handling terminal frames and volatile process requests.
- Developed a service for executing non-durable FCL processes.
- Added a notifier for managing process state in terminal applications.
- Implemented unit tests for the snake game functionality and volatile process execution.
- Created a market test to validate the snake package structure and functionality.